--- a/profile.html
+++ b/profile.html
@@ -28,10 +28,10 @@
             <div class="work">
                 <h2>My Work</h2>
                 <div class="grid">
-                <div class="wo w1"><a href="#">Cricketer</a></div>
-                <div class="wo w2"><a href="#">Prime Minister</a></div>
-                <div class="wo w3"><a href="#">SKH</a></div>
-                <div class="wo w4"><a href="#">Billion Tree</a></div>
+                <div class="wo w1"><a href="https://www.pcb.com.pk/imran-khan.html">Cricketer</a></div>
+                <div class="wo w2"><a href="https://en.wikipedia.org/wiki/Imran_Khan#Prime_Minister_(2018-2022)">Prime Minister</a></div>
+                <div class="wo w3"><a href="https://shaukatkhanum.org.pk/">SKH</a></div>
+                <div class="wo w4"><a href="https://www.rferl.org/a/pakistan-tree-planting-tsunami-khan/31973782.html">Billion Tree</a></div>
                 </div>
                 
             </div>
